# rust-webplatform

./: .gitignore  Cargo.toml  Makefile  README.md  emcc  i386-unknown-emscripten.json  setup.sh
.cargo/: config
concat_bytes/: Cargo.toml  README.md
concat_bytes/examples/: simple.rs
concat_bytes/src/: expand.rs  lib.rs
concat_bytes/tests/: basic.rs
src/: lib.rs  library_rust.js  main.rs  test.rs  webplatform.rs
static/: index.html  webplatform.js
