[package]

name = "webplatform"
version = "0.4.1"
license = "MIT"
description = "APIs for the web platform for cross-compiled Rust to JS."
authors = ["Tim Cameron Ryan <tim@timryan.org>"]

[[bin]]
name = "webplatform-test"

[lib]
name = "webplatform"
path = "src/lib.rs"

[dependencies]
libc = "0.2.16"
