[package]

name = "webplatform"
version = "0.4.2"
license = "MIT/Apache-2.0"
description = "APIs for the web platform for cross-compiled Rust to JS."
authors = ["Tim Cameron Ryan <tim@timryan.org>"]
repository = "https://github.com/tcr/rust-webplatform"
homepage = "https://github.com/tcr/rust-webplatform"

[[bin]]
name = "webplatform-test"

[lib]
name = "webplatform"
path = "src/lib.rs"

[dependencies]
libc = "0.2.16"
