[package]
name = "webplatform_concat_bytes"
version = "0.0.1"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
license = "MIT"
description = "A concat_bytes! macro which concat byte arrays"
homepage = "https://github.com/KokaKiwi/concat_bytes"
repository = "https://github.com/KokaKiwi/concat_bytes"

[lib]
name = "concat_bytes"
plugin = true
